牛客多校第二场

--- a/多校/2020牛客/2020牛客多校第二场.md
+++ b/多校/2020牛客/2020牛客多校第二场.md
@@ -1,3 +1,1182 @@
 # 2020牛客暑期多校训练营（第二场）
 
-## 
+## A.All with Pairs
+
+定义$f(s, t) = i$,表示最大的$i$满足$s_{i...i} = t_{|t|-i+1...|t|}$.不存在则为$0$.计算$\sum _{i=1}^n \sum _{j=1}^m f(i, j)^2$.  
+对与给的字符串的所有后缀，考虑$hash$,再去枚举每个字符串的前缀计算贡献，但是考虑一些特殊情况，比如字符串$ababa$,他的后缀有$a, ba, aba, baba, ababa$.前缀有$a, ab, aba, abab, ababa$, 这样在计算的时候， 会发现这一个字符串提供了三个前后缀相等的情况，所以需要用$kmp$去解决，对于一段子串一段前缀等于后缀的情况， 就要将这个前缀的贡献减去这个子串的贡献，因为取最长的情况。  
+
+```c++
+#include<iostream>
+#include<string>
+#include<cstdio>
+#include<vector>
+#include<string.h>
+#include<cstring>
+#include<set>
+#include<queue>
+#include<algorithm>
+#include<math.h>
+#include<stdio.h>
+#include<map>
+#include<stack>
+#include<list>
+#define pii pair<int, int>
+#define pll pair<LL, LL>
+#define pil pair<int, LL>
+#define pli pair<LL, int>
+#define mp make_pair
+#define pb push_back
+#define IOS ios::sync_with_stdio(false);cin.tie(0);cout.tie(0);
+#define MINF 0x3f3f3f3f
+using namespace std;
+typedef long long LL;
+typedef unsigned long long ULL;
+const LL LLINF = 1e18;
+const int INF = 1e9;
+const int MOD = 998244353;
+const int HMOD = 999959;
+const int VMOD = 5000000;
+const int MAXN = 1e6+10;
+const int MAXM = 5e5+10;
+const int INV = 10050505;
+const LL LLINV = 1e18;
+const double eps = 1e-3;
+int dirx[5] = {0, -1, 1, 0, 0}, diry[5] = {0, 0, 0, -1, 1};
+ 
+int Next[MAXN], base = 233, n;
+LL cnt[MAXN];
+string s[MAXN];
+ 
+map<ULL, int> has;
+ 
+void GetNext(string ori)
+{
+    int len = ori.size();
+    int j = 0, k = -1;
+    Next[0] = -1;
+    while (j < len)
+    {
+        if (k == -1 || ori[j] == ori[k])
+        {
+            ++j;
+            ++k;
+            Next[j] = k;
+        }
+        else
+            k = Next[k];
+    }
+}
+ 
+void sol(string s)
+{
+    ULL val = 0, mul = 1;
+    for (int i = s.length()-1;i >= 0; --i)
+    {
+        val += 1LL*(s[i]-'a'+1)*mul;
+        mul *= base;
+        ++has[val];
+    }
+}
+ 
+int main()
+{
+IOS;
+    cin >> n;
+    for (int i = 1;i <= n; ++i)
+    {
+        cin >> s[i];
+        sol(s[i]);
+    }
+    LL ans = 0;
+    for (int i = 1;i <= n; ++i)
+    {
+        ULL val = 0;
+        for (int j = 0;j < s[i].length(); ++j)
+        {
+            val = val*base+(s[i][j]-'a'+1);
+            cnt[j] = has[val];
+        }
+        GetNext(s[i]);
+        for (int j = 1;j <= s[i].length(); ++j) if (Next[j] > 0)
+            cnt[Next[j]-1] -= cnt[j-1];
+        for (int j = 0;j < s[i].length(); ++j)
+            ans = (ans + 1LL*(j+1)*(j+1)%MOD*cnt[j]%MOD)%MOD;
+    }
+    printf("%lld\n", ans);
+ 
+    return 0;
+}
+```
+
+## B.Boundary
+
+给$n$个点,考虑边界经过原点的任意圆，求最多多少点在圆的边界上。
+队友写的。    
+$n^2$枚举所有点记录圆心位置，然后看经过圆心数量最多的答案。  
+
+```c++
+#include <stdio.h>
+#include <string.h>
+#include <iostream>
+#include <algorithm>
+#include <vector>
+#include <queue>
+#include <set>
+#include <map>
+#include <list>
+#include <map>
+#include <string>
+#include <stack>
+#include <math.h>
+#include <stdlib.h>
+#include <time.h>
+#include <iomanip>
+#include<limits.h>
+#define S(X) scanf("%d",&(X))
+#define SS(X, Y) scanf("%d%d",&(X),&(Y))
+#define SSS(X,Y,Z) scanf("%d%d%d",&(X),&(Y),&(Z))
+#define SL(X) scanf("%lld",&(X))
+#define SLL(X, Y) scanf("%lld%lld",&(X),&(Y))
+using namespace std;
+typedef double db;
+typedef long long ll;
+const int mod = 998244353;
+const double eps = 1e-6;
+const int maxn = 4e3 + 7;
+struct Point
+{ //点
+    double x,y;
+    Point(){}
+    Point(double _x,double _y)
+    {
+        x = _x; y = _y;
+    }
+    Point operator +(const Point &b)const
+    {
+        return Point(x + b.x, y + b.y);
+    }
+    Point operator -(const Point &b)const
+    {
+        return Point(x - b.x, y - b.y);
+    }
+    bool friend operator<(const Point& p1,const Point& p2){
+        if(fabs(p1.x-p2.x)>eps)return p1.x<p2.x;return p1.y<p2.y;
+    }
+    double operator *(const Point &b)const
+    { //点积
+        return x*b.x + y*b.y;
+    }
+    double friend operator^(const Point& p1,const Point& p2){
+        return p1.x*p2.y-p2.x*p1.y;
+    }
+}p[maxn];
+map<Point,int>mp;
+Point xin(Point a, Point b, Point c)
+{
+    double a1 = b.x - a.x, b1 = b.y - a.y, c1 = (a1 * a1 + b1 * b1) / 2.0;
+    double a2 = c.x - a.x, b2 = c.y - a.y, c2 = (a2 * a2 + b2 * b2) / 2.0;
+    double d = a1 * b2 - a2 * b1;
+    return Point(a.x + (c1 * b2 - c2 * b1) / d, a.y + (a1 * c2 - a2 * c1) / d);
+}
+int main(){
+    int n;
+    S(n);
+    for(int i = 0;i < n;i++){
+        scanf("%lf%lf",&p[i].x,&p[i].y);
+    }
+    if(n <= 2) {
+        printf("%d\n",n);
+        return 0;
+        }
+    int ans=0;
+    for(int i = 0;i < n;i++){
+        mp.clear();
+        for(int j = i + 1;j < n;j++){
+            if(abs(p[i] ^ p[j]) >= eps) {
+            Point xinn= xin(Point(0,0),p[i],p[j]);
+            mp[xinn]++;
+            ans = max(ans,mp[xinn]);
+           }
+        }
+    }
+    printf("%d\n", ans + 1);
+    return 0;
+}
+```
+
+## C.Cover the Tree
+
+用最少的路径覆盖无根树。  
+路径数显然是$\lceil \frac{n}{2} \rceil$，但是路径就挺麻烦，赛场瞎搞过的。  
+题解是说取非叶子节点当作跟，然后$dfs$序排序，隔差不多$n/2$的位置两两取。  
+
+```c++
+#include<iostream>
+#include<string>
+#include<cstdio>
+#include<vector>
+#include<string.h>
+#include<cstring>
+#include<set>
+#include<queue>
+#include<algorithm>
+#include<math.h>
+#include<stdio.h>
+#include<map>
+#include<stack>
+#include<list>
+#define pii pair<int, int>
+#define pll pair<LL, LL>
+#define pil pair<int, LL>
+#define pli pair<LL, int>
+#define mp make_pair
+#define pb push_back
+#define IOS ios::sync_with_stdio(false);cin.tie(0);cout.tie(0);
+#define MINF 0x3f3f3f3f
+using namespace std;
+typedef long long LL;
+typedef unsigned long long ULL;
+const LL LLINF = 1e18;
+const int INF = 1e9;
+const int MOD = 20101009;
+const int HMOD = 999959;
+const int VMOD = 5000000;
+const int MAXN = 2e5+10;
+const int MAXM = 5e5+10;
+const int INV = 10050505;
+const LL LLINV = 1e18;
+const double eps = 1e-3;
+int dirx[5] = {0, -1, 1, 0, 0}, diry[5] = {0, 0, 0, -1, 1};
+ 
+int n, cnt, tot, rt;
+int siz[MAXN], wt[MAXN];
+int dis[MAXN];
+int p;
+stack<int> vec[MAXN];
+vector<int> G[MAXN];
+priority_queue<pii> que;
+ 
+void getroot(int u, int fa)
+{
+    if (dis[u] == 1) siz[u] = 1;
+    wt[u] = 0;
+    for (auto v: G[u])
+    {
+        if (v == fa) continue;
+        getroot(v, u);
+        siz[u] += siz[v];
+        wt[u] = max(wt[u], siz[v]);
+    }
+    wt[u] = max(tot-siz[u], wt[u]);
+    if (dis[u] != 1 && (rt == 0 || wt[u] < wt[rt])) rt = u;
+    /* cout << u << ' ' << wt[u] << ' ' << rt << ' ' << wt[rt] << endl; */
+}
+ 
+void dfs(int u, int fa)
+{
+    if (dis[u] == 1)
+    {
+        vec[p].push(u);
+        return;
+    }
+    for (auto v: G[u])
+    {
+        if (v == fa) continue;
+        dfs(v, u);
+    }
+}
+ 
+int main()
+{
+IOS;
+    scanf("%d", &n);
+    if (n == 1)
+    {
+        puts("0");
+        return 0;
+    }
+    if (n == 2)
+    {
+        puts("2\n1 2");
+        return 0;
+    }
+    for (int i = 1, u, v;i < n; ++i)
+    {
+        scanf("%d%d", &u, &v);
+        G[u].pb(v);
+        G[v].pb(u);
+        ++dis[u];
+        ++dis[v];
+    }
+    for (int i = 1;i <= n; ++i) if (dis[i] == 1) ++tot;
+    int ans = (tot+1)/2;
+ 
+    getroot(1, 0);
+    for (auto v: G[rt])
+    {
+        ++p;
+        dfs(v, rt);
+    }
+    for (int i = 1;i <= p; ++i) que.push(mp(vec[i].size(), i));
+    /* for (int i = 1;i <= p; ++i) cout << vec[i].size() << endl; */
+    /* return 0; */
+    /* cout << que.size() << endl; */
+    /* cout << rt << endl; */
+    printf("%d\n", ans);
+    while(que.size() > 1)
+    {
+        int l = que.top().second;
+        /* cout << que.top().first << endl; */
+        que.pop();
+        int r = que.top().second;;
+        /* cout << que.top().first << endl; */
+        que.pop();
+        printf("%d %d\n", vec[l].top(), vec[r].top());
+        vec[l].pop(), vec[r].pop();
+        if (vec[l].size() > 0) que.push(mp(vec[l].size(), l));
+        if (vec[r].size() > 0) que.push(mp(vec[r].size(), r));
+    }
+    if (que.size() > 0)
+    {
+        int p = que.top().second;
+        while(vec[p].size() > 1)
+        {
+            int l = vec[p].top(); vec[p].pop();
+            int r = vec[p].top(); vec[p].pop();
+            printf("%d %d\n", l, r);
+        }
+        if (vec[p].size() > 0)
+            printf("%d %d\n", rt, vec[p].top());
+    }
+ 
+    return 0;
+}
+```
+
+## D.Duration
+
+模拟
+
+```c++
+#include<iostream>
+#include<string>
+#include<cstdio>
+#include<vector>
+#include<string.h>
+#include<cstring>
+#include<set>
+#include<queue>
+#include<algorithm>
+#include<math.h>
+#include<stdio.h>
+#include<map>
+#include<stack>
+#include<list>
+#define pii pair<int, int>
+#define pll pair<LL, LL>
+#define pil pair<int, LL>
+#define pli pair<LL, int>
+#define mp make_pair
+#define pb push_back
+#define IOS ios::sync_with_stdio(false);cin.tie(0);cout.tie(0);
+#define MINF 0x3f3f3f3f
+using namespace std;
+typedef long long LL;
+typedef unsigned long long ULL;
+const LL LLINF = 1e18;
+const int INF = 1e9;
+const int MOD = 20101009;
+const int HMOD = 999959;
+const int VMOD = 5000000;
+const int MAXN = 3e5+10;
+const int MAXM = 5e5+10;
+const int INV = 10050505;
+const LL LLINV = 1e18;
+const double eps = 1e-3;
+int dirx[5] = {0, -1, 1, 0, 0}, diry[5] = {0, 0, 0, -1, 1};
+ 
+int h1, m1, s1, h2, m2, s2;
+ 
+int main()
+{
+IOS;
+    scanf("%d:%d:%d", &h1, &m1, &s1);
+    scanf("%d:%d:%d", &h2, &m2, &s2);
+    int l = h1*3600+m1*60+s1, r = h2*3600+m2*60+s2;
+    printf("%d\n", abs(r-l));
+ 
+    return 0;
+}
+```
+
+## E.Exclusive OR
+
+可以看出当$i$够大时，答案是不变的。因为可以选两个相互抵消，对于较小的情况可以异或卷积。  
+
+```c++
+#include<iostream>
+#include<string>
+#include<cstdio>
+#include<vector>
+#include<string.h>
+#include<cstring>
+#include<set>
+#include<queue>
+#include<algorithm>
+#include<math.h>
+#include<stdio.h>
+#include<map>
+#include<stack>
+#include<list>
+#define pii pair<int, int>
+#define pll pair<LL, LL>
+#define pil pair<int, LL>
+#define pli pair<LL, int>
+#define mp make_pair
+#define pb push_back
+#define IOS ios::sync_with_stdio(false);cin.tie(0);cout.tie(0);
+#define MINF 0x3f3f3f3f
+using namespace std;
+typedef long long LL;
+typedef unsigned long long ULL;
+const LL LLINF = 1e18;
+const int INF = 1e9;
+const int MOD = 998244353;
+const int HMOD = 999959;
+const int VMOD = 5000000;
+const int MAXN = 2e5+10;
+const int MAXM = 5e5+10;
+const int INV = 10050505;
+const int inv2 = 499122177;
+const LL LLINV = 1e18;
+const double eps = 1e-3;
+int dirx[5] = {0, -1, 1, 0, 0}, diry[5] = {0, 0, 0, -1, 1};
+ 
+const int N = 1<<18;
+int n;
+int a[N+10], b[N+10], ans[MAXN];
+ 
+void FWT_xor(int *a,int opt)
+{
+    for(int i=1;i<N;i<<=1)
+        for(int p=i<<1,j=0;j<N;j+=p)
+            for(int k=0;k<i;++k)
+            {
+                int X=a[j+k],Y=a[i+j+k];
+                a[j+k]=(X+Y)%MOD;a[i+j+k]=(X+MOD-Y)%MOD;
+                if(opt==-1)a[j+k]=1ll*a[j+k]*inv2%MOD,a[i+j+k]=1ll*a[i+j+k]*inv2%MOD;
+            }
+}
+ 
+int main()
+{
+IOS;
+    scanf("%d", &n);
+    for (int i = 1, x;i <= n; ++i)
+    {
+        scanf("%d", &x);
+        a[x] = b[x] = 1;
+    }
+    FWT_xor(b, 1);
+    for (int i = 1;i <= 19; ++i)
+    {
+        for (int j = 0;j < N; ++j) if (a[j]) ans[i] = j, a[j] = 1;
+        FWT_xor(a, 1);
+        for (int j = 0;j < N; ++j) a[j] = 1LL*a[j]*b[j]%MOD;
+        FWT_xor(a, -1);
+    }
+    for (int i = 20;i <= n; ++i) ans[i] = ans[i-2];
+    for (int i = 1;i <= n; ++i)
+        printf("%d ", ans[i]);
+    puts("");
+ 
+    return 0;
+}
+```
+
+## F.Fake Maxpooling
+
+暴力求$lcm$, 之后就是裸的单调队列题目。  
+
+```c++
+#include<iostream>
+#include<string>
+#include<cstdio>
+#include<vector>
+#include<string.h>
+#include<cstring>
+#include<set>
+#include<queue>
+#include<algorithm>
+#include<math.h>
+#include<stdio.h>
+#include<map>
+#include<stack>
+#include<list>
+#define pii pair<int, int>
+#define pll pair<LL, LL>
+#define pil pair<int, LL>
+#define pli pair<LL, int>
+#define mp make_pair
+#define pb push_back
+#define IOS ios::sync_with_stdio(false);cin.tie(0);cout.tie(0);
+#define MINF 0x3f3f3f3f
+using namespace std;
+typedef long long LL;
+typedef unsigned long long ULL;
+const LL LLINF = 1e18;
+const int INF = 1e9;
+const int MOD = 20101009;
+const int HMOD = 999959;
+const int VMOD = 5000000;
+const int MAXN = 5e3+10;
+const int MAXM = 5e5+10;
+const int INV = 10050505;
+const LL LLINV = 1e18;
+const double eps = 1e-3;
+int dirx[5] = {0, -1, 1, 0, 0}, diry[5] = {0, 0, 0, -1, 1};
+ 
+int n, m, k;
+int a[MAXN][MAXN];
+int rowmax[MAXN][MAXN];
+int que[MAXN];
+int head, tail;
+LL ans = 0;
+ 
+void calrow(int x)
+{
+    head = 0, tail = 0;
+    for (int i = 1;i <= k; ++i)
+    {
+        while (head < tail && a[x][i] > a[x][que[tail-1]]) --tail;
+        que[tail++] = i;
+        rowmax[x][1] = a[x][que[head]];
+    }
+    for (int l = 2, r = k+1;r <= m;++l, ++r)
+    {
+        while(head < tail && que[head] < l) ++head;
+        while(head < tail && a[x][r] > a[x][que[tail-1]]) --tail;
+        que[tail++] = r;
+        rowmax[x][l] = a[x][que[head]];
+        /* cout << l << ' ' << r << ' ' << que[head].first << endl; */
+    }
+}
+ 
+void calcol(int y)
+{
+    head = 0, tail = 0;
+    for (int i = 1;i <= k; ++i)
+    {
+        while (head < tail && rowmax[i][y] > rowmax[que[tail-1]][y]) --tail;
+        que[tail++] = i;
+    }
+    ans += rowmax[que[head]][y];
+    for (int l = 2, r = k+1;r <= n; ++l, ++r)
+    {
+        while(head < tail && que[head] < l) ++head;
+        while(head < tail && rowmax[r][y] > rowmax[que[tail-1]][y]) --tail;
+        que[tail++] = r;
+        ans += rowmax[que[head]][y];
+    }
+    /* cout << ans << endl; */
+}
+ 
+int main()
+{
+IOS;
+    scanf("%d%d%d", &n, &m, &k);
+    for (int i = 1;i <= n; ++i) for (int j = 1;j <= m; ++j) a[i][j] = i*j/__gcd(i, j);
+    for (int i = 1;i <= n; ++i) calrow(i);
+    ans = 0;
+    for (int i = 1;i+k-1 <= m; ++i) calcol(i);
+    /* for (int i = 1;i+k-1 <= n; ++i) for (int j = 1;j+k-1 <= m; ++j) ans += colmax[i][j]; */
+    printf("%lld\n", ans);
+ 
+    return 0;
+}
+```
+
+## G.Greater and Greater
+
+给定长度为$n$的序列$A$, 长度为$m$的序列$B$.求出在$A$中长度为$m$的子串$C$,满足$C_i \geq B_i$的个数。  
+看到$40000$就是$bitset$，不懂为什么。  
+先对于$A$序列每个值,得到一个长为$m$的$bitset$，第$i$位为$1$表示$A_i > B_i$,发现最多只有$m$种，我们可以从小到大枚举$B$数组的值，对于比$B_i$小的值设为$1$，其他为$0$, 对于$A$数组中的值，就可以用二分查询到对应的$bitset$。  
+对于答案，单独维护一个$bitset$, 对于$A$中的一个长度为$m$的串，如果$bitset$的第$i$位为$1$,表示$i \in [1, m-i+1]$都有$j \in [0, m-i], A_{j} \geq B_{i+j}$.  
+这样从后往前遍历， 对于前一个，用当前$bitset$，的后$m-1$位去和之前求出来的与一下就能得到前一位的值了。  
+
+```c++
+#include<iostream>
+#include<string>
+#include<cstdio>
+#include<vector>
+#include<string.h>
+#include<cstring>
+#include<set>
+#include<queue>
+#include<algorithm>
+#include<math.h>
+#include<stdio.h>
+#include<map>
+#include<stack>
+#include<list>
+#include<bitset>
+#define pii pair<int, int>
+#define pll pair<LL, LL>
+#define pil pair<int, LL>
+#define pli pair<LL, int>
+#define mp make_pair
+#define pb push_back
+#define IOS ios::sync_with_stdio(false);cin.tie(0);cout.tie(0);
+#define MINF 0x3f3f3f3f
+using namespace std;
+typedef long long LL;
+typedef unsigned long long ULL;
+const LL LLINF = 1e18;
+const int INF = 1e9;
+const int MOD = 20101009;
+const int HMOD = 999959;
+const int VMOD = 5000000;
+const int MAXN = 2e5+10;
+const int MAXM = 5e5+10;
+const int INV = 10050505;
+const LL LLINV = 1e18;
+const double eps = 1e-3;
+int dirx[5] = {0, -1, 1, 0, 0}, diry[5] = {0, 0, 0, -1, 1};
+ 
+int n, m;
+int a[MAXN], c[MAXN];
+pii b[MAXN];
+bitset<40005> ord[40005], cur;
+int cnt, tot;
+ 
+bool cmp(pii l, pii r)
+{
+    return l.second < r.second;
+}
+ 
+void sol()
+{
+    cnt = tot = 0;
+    ord[0].reset();
+    sort(b+1, b+1+m);
+    for (int l = 1, r;l <= m;l = r)
+    {
+        r = l+1;
+        while(r <= n && b[r].first == b[l].first) ++r;
+        c[++tot] = b[l].first;
+        ++cnt;
+        ord[cnt] = ord[cnt-1];
+        for (int k = l;k < r; ++k) ord[cnt].set(b[k].second);
+    }
+    /* for (int i = 0;i <= cnt; ++i) */
+        /* cout << ord[i] << endl; */
+    /* for (int i = 0;i <= tot; ++i) */
+        /* cout << c[i] << ' ' ; */
+    /* cout << endl; */
+}
+ 
+int getpos(int x)
+{
+    int p = upper_bound(c, c+1+tot, a[x])-c;
+    if (p > 0) --p;
+    return p;
+}
+ 
+int main()
+{
+IOS;
+    scanf("%d%d", &n, &m);
+    for (int i = 1;i <= n; ++i) scanf("%d", &a[i]);
+    for (int i = 1;i <= m; ++i) scanf("%d", &b[i].first), b[i].second = i-1;
+    sol();
+    cur.reset();
+    int ans = 0;
+    for (int i = n;i >= 1; --i)
+    {
+        /* cout << i << ":\n"; */
+        /* cout << getpos(i) << ' ' << ord[getpos(i)] << endl; */
+        cur >>= 1;
+        cur.set(m-1);
+        /* cout << cur << endl; */
+        cur &= ord[getpos(i)];
+        /* if (a[i] > b[m].first) cur.set(m); */
+        /* cout << cur << endl; */
+        if (cur[0]) ++ans;
+    }
+    printf("%d\n", ans);
+ 
+    return 0;
+}
+```
+
+## H.Happy Triangle
+
+对于一个多重集，有三种操作，插入一个数，删除一个数， 给一个$x$，能不能和其中的数组成三角形。  
+我们假设$x, a, b$,组成三角形，如果，$x \leq a \leq b$,或者$a \leq x \leq b$, 要满足$a+x > b$, 用线段树记录$a-b$最小值。每次查询看看满不满足条件。  
+另一种情况就是$x$是最大值，用$set$查一下。  
+
+```c++
+#include<iostream>
+#include<string>
+#include<cstdio>
+#include<vector>
+#include<string.h>
+#include<cstring>
+#include<set>
+#include<queue>
+#include<algorithm>
+#include<math.h>
+#include<stdio.h>
+#include<map>
+#include<stack>
+#include<list>
+#define pii pair<int, int>
+#define pll pair<LL, LL>
+#define pil pair<int, LL>
+#define pli pair<LL, int>
+#define mp make_pair
+#define pb push_back
+#define IOS ios::sync_with_stdio(false);cin.tie(0);cout.tie(0);
+#define MINF 0x3f3f3f3f
+using namespace std;
+typedef long long LL;
+typedef unsigned long long ULL;
+const LL LLINF = 1e18;
+const int INF = 1e9;
+const int MOD = 20101009;
+const int HMOD = 999959;
+const int VMOD = 5000000;
+const int MAXN = 2e5+10;
+const int MAXM = 5e5+10;
+const int INV = 10050505;
+const LL LLINV = 1e18;
+const double eps = 1e-3;
+int dirx[5] = {0, -1, 1, 0, 0}, diry[5] = {0, 0, 0, -1, 1};
+ 
+int n, tot;
+pii oper[MAXN];
+int b[MAXN], cnt[MAXN], val[MAXN];
+set<int> st;
+int seg[MAXN*4];
+ 
+int getpos(int x)
+{
+    return lower_bound(b+1, b+1+tot, x)-b;
+}
+ 
+void build(int rt, int l, int r)
+{
+    seg[rt] = 1e9+1;
+    if (l == r) return;
+    int mid = (l+r)/2;
+    build(rt<<1, l, mid);
+    build(rt<<1|1, mid+1, r);
+}
+ 
+void upd(int rt, int l, int r, int p, int v)
+{
+    if (l == r)
+    {
+        seg[rt] = v;
+        return;
+    }
+    int mid = (l+r)/2;
+    if (p <= mid) upd(rt<<1, l, mid, p, v);
+    else upd(rt<<1|1, mid+1, r, p, v);
+    seg[rt] = min(seg[rt<<1], seg[rt<<1|1]);
+}
+ 
+int qry(int rt, int l, int r, int ql, int qr)
+{
+    if (l >= ql && r <= qr) return seg[rt];
+    int mid = (l+r)/2;
+    int ans = 1e9+1;
+    if (ql <= mid) ans = min(ans, qry(rt<<1, l, mid, ql, qr));
+    if (qr > mid) ans = min(ans, qry(rt<<1|1, mid+1, r, ql, qr));
+    return ans;
+}
+ 
+bool check(int p)
+{
+    int val = qry(1, 1, tot, p, tot);
+    /* cout << "qry complete" << endl; */
+    /* cout << val << endl; */
+    if (b[p] > val) return true;
+    /* cout << "x is big" << endl; */
+    /* cout << "lower_bound complete" << endl; */
+    if (st.empty()) return false;
+    auto it = st.lower_bound(p);
+    if (*it > p && it == st.begin()) return false;
+    --it;
+    LL ans = 0;
+    /* cout << *it << endl; */
+    if (cnt[*it] > 1) ans = (LL)b[*it]+b[*it];
+    else
+    {
+        ans = b[*it];
+        if (it == st.begin()) return false;
+        --it;
+        ans += b[*it];
+    }
+    if (ans > b[p]) return true;
+    return false;
+}
+ 
+int main()
+{
+IOS;
+    scanf("%d", &n);
+    for (int i = 1;i <= n; ++i) scanf("%d%d", &oper[i].first, &oper[i].second), b[i] = oper[i].second;
+    sort(b+1, b+1+n);
+    tot = unique(b+1, b+1+n)-(b+1);
+    /* cout << "sort complete */
+    build(1, 1, tot);
+    /* cout << "build complete" << endl; */
+    for (int i = 1;i <= tot; ++i) val[i] = 1e9+1;
+    for (int i = 1;i <= n; ++i)
+    {
+        /* cout << i << ' ' << oper[i].first << endl; */
+        if (oper[i].first == 1)
+        {
+            int p = getpos(oper[i].second);
+            if (cnt[p] == 0)
+            {
+                auto it = st.lower_bound(p);
+                if (it != st.end())
+                {
+                    int v = b[*it]-b[p];
+                    if (val[*it] > v)
+                    {
+                        val[*it] = v;
+                        upd(1, 1, tot, *it, v);
+                    }
+                }
+                if (it != st.begin())
+                {
+                    --it;
+                    int v = b[p]-b[*it];
+                    if (val[p] > v)
+                    {
+                        val[p] = v;
+                        upd(1, 1, tot, p, v);
+                    }
+                }
+                st.insert(p);
+                ++cnt[p];
+            }
+            else
+            {
+                ++cnt[p];
+                if (val[p] > 0)
+                {
+                    val[p] = 0;
+                    upd(1, 1, tot, p, 0);
+                }
+            }
+        }
+        if (oper[i].first == 2)
+        {
+            int p = getpos(oper[i].second);
+            if (cnt[p] == 1)
+            {
+                st.erase(p);
+                --cnt[p];
+                val[p] = 1e9+1;
+                upd(1, 1, tot, p, val[p]);
+                auto it = st.lower_bound(p);
+                if (it != st.end()) if (cnt[*it] == 1)
+                {
+                    int q = *it;
+                    if (it == st.begin())
+                        val[q] = 1e9+1;
+                    else
+                    {
+                        --it;
+                        val[q] = b[q]-b[*it];
+                    }
+                    upd(1, 1, tot, q, val[q]);
+                }
+            }
+            else
+            {
+                --cnt[p];
+                if (cnt[p] == 1)
+                {
+                    auto it = st.lower_bound(p);
+                    if (it == st.begin())
+                        val[p] = 1e9+1;
+                    else
+                    {
+                        --it;
+                        val[p] = b[p]-b[*it];
+                    }
+                    upd(1, 1, tot, p, val[p]);
+                }
+            }
+        }
+        if (oper[i].first == 3)
+        {
+            int p = getpos(oper[i].second);
+            /* cout << p << endl; */
+            if (check(p)) puts("Yes");
+            else puts("No");
+        }
+    }
+ 
+    return 0;
+}
+```
+
+## I.Interval
+
+有一个区间， 可以从$[l, r]$,转移到$[l+1, r], [l, r-1], [l-1, r], [l, r+1]$.  
+现在为了防止转移到$[l, l]$, 这种状态， 有一些操作，可以阻止某些变换， 问最小的代价。  
+把所有转移画出来就发现，就可以看成是网络流中的最小割，同时平面图转对偶图，就可以把之间的空间连边， 去求这个对偶图的最短路。  
+
+```c++
+#include<iostream>
+#include<string>
+#include<cstdio>
+#include<vector>
+#include<string.h>
+#include<cstring>
+#include<set>
+#include<queue>
+#include<algorithm>
+#include<math.h>
+#include<stdio.h>
+#include<map>
+#include<stack>
+#include<list>
+#define pii pair<int, int>
+#define pll pair<LL, LL>
+#define pil pair<int, LL>
+#define pli pair<LL, int>
+#define mp make_pair
+#define pb push_back
+#define IOS ios::sync_with_stdio(false);cin.tie(0);cout.tie(0);
+#define MINF 0x3f3f3f3f
+using namespace std;
+typedef long long LL;
+typedef unsigned long long ULL;
+const LL LLINF = 1e18;
+const int INF = 1e9;
+const int MOD = 20101009;
+const int HMOD = 999959;
+const int VMOD = 5000000;
+const int MAXN = 5e5+10;
+const int MAXM = 5e5+10;
+const int INV = 10050505;
+const LL LLINV = 1e18;
+const double eps = 1e-3;
+int dirx[5] = {0, -1, 1, 0, 0}, diry[5] = {0, 0, 0, -1, 1};
+ 
+struct Edge
+{
+    int v;
+    LL w;
+    int nxt;
+}e[MAXN*2];
+struct Node
+{
+    int u;
+    LL d;
+    bool operator < (const Node& rhs) const
+    {
+        return this->d > rhs.d;
+    }
+};
+int fir[MAXN], vis[MAXN];
+LL dis[MAXN];
+int n, m, s, t, cnt;
+ 
+void addedge(int u, int v, LL w)
+{
+    e[cnt] = Edge{v, w, fir[u]};
+    fir[u] = cnt;
+    ++cnt;
+}
+ 
+void dij()
+{
+    priority_queue<Node> que;
+    for (int i = 1;i <= t; ++i) dis[i] = LLINF;
+    que.push(Node{s, 0});
+    dis[s] = 0;
+    while(!que.empty())
+    {
+        int u = que.top().u;
+        LL d = que.top().d;
+        que.pop();
+        /* cout << u << ' ' << d << endl; */
+        if (vis[u]) continue;
+        vis[u] = 1;
+        for (int i = fir[u];~i; i = e[i].nxt) if (!vis[e[i].v])
+        {
+            int v = e[i].v;
+            if (d+e[i].w < dis[v])
+            {
+                dis[v] = d+e[i].w;
+                que.push(Node{v, d+e[i].w});
+            }
+        }
+    }
+}
+ 
+LL g[510][510][2];
+int id[510][510];
+ 
+int main()
+{
+IOS;
+    memset(fir, -1, sizeof(fir));
+    scanf("%d%d", &n, &m);
+    s = (n-1)*(n-1)+1, t = (n-1)*(n-1)+2;
+    for (int i = 1;i <= n; ++i)
+    {
+        for (int j = 1;j <= n; ++j) g[i][j][0] = g[i][j][1] = LLINF;
+    }
+    int l, r, v;
+    char op[5];
+    for (int i = 1;i <= m; ++i)
+    {
+        scanf("%d%d%s%d", &l, &r, op, &v);
+        if (op[0] == 'L') g[l][r][1] = v;
+        else g[l][r][0] = v;
+    }
+    int tot = 0;
+    for (int i = 1;i < n; ++i)
+    {
+        for (int j = n;j > i; --j)
+            id[i][j] = ++tot;
+    }
+    for (int i = 1;i < n; ++i) id[i][n+1] = s;
+    for (int j = n;j > 1; --j) id[0][j] = t;
+    for (int i = 1;i < n; ++i)
+    {
+        for (int j = n;j > 1; --j)
+        {
+            /* cout << id[i][j] << ' ' << id[i-1][j] << endl; */
+            /* cout << id[i][j] << ' ' << id[i][j+1] << endl; */
+            addedge(id[i][j], id[i-1][j], g[i][j][0]);
+            addedge(id[i-1][j], id[i][j], g[i][j][0]);
+            addedge(id[i][j], id[i][j+1], g[i][j][1]);
+            addedge(id[i][j+1], id[i][j], g[i][j][1]);
+        }
+    }
+    // p = (i-1)(1+(i-1))
+    dij();
+    printf("%lld\n", dis[t] == LLINF ? -1 : dis[t]);
+ 
+    return 0;
+}
+```
+
+## J.Just Shuffle
+
+对于置换$A$， 求出每个环$r$, 令这个环的置换位$B$, 我们有$B*\frac{1}{k}*k = B$, 所以我们算出$inv = \frac{1}{k} mod r$, 在换上变成这个置换就是一个答案。  
+
+```c++
+#include<iostream>
+#include<string>
+#include<cstdio>
+#include<vector>
+#include<string.h>
+#include<cstring>
+#include<set>
+#include<queue>
+#include<algorithm>
+#include<math.h>
+#include<stdio.h>
+#include<map>
+#include<stack>
+#include<list>
+#define pii pair<int, int>
+#define pll pair<LL, LL>
+#define pil pair<int, LL>
+#define pli pair<LL, int>
+#define mp make_pair
+#define pb push_back
+#define IOS ios::sync_with_stdio(false);cin.tie(0);cout.tie(0);
+#define MINF 0x3f3f3f3f
+using namespace std;
+typedef long long LL;
+typedef unsigned long long ULL;
+const LL LLINF = 1e18;
+const int INF = 1e9;
+const int MOD = 20101009;
+const int HMOD = 999959;
+const int VMOD = 5000000;
+const int MAXN = 1e5+10;
+const int MAXM = 5e5+10;
+const int INV = 10050505;
+const LL LLINV = 1e18;
+const double eps = 1e-3;
+int dirx[5] = {0, -1, 1, 0, 0}, diry[5] = {0, 0, 0, -1, 1};
+ 
+int n, k;
+int a[MAXN], vis[MAXN], ans[MAXN];
+ 
+LL powmod(LL a, LL b, LL p)
+{
+    LL ans = 1;
+    while(b)
+    {
+        if (b&1) ans = ans*a%p;
+        a = a*a%p;
+        b >>= 1;
+    }
+    return ans;
+}
+ 
+void exgcd(int x,int y,int &a,int &b){
+    if(!y){
+        a=1,b=0;
+        return;
+    }
+    exgcd(y,x%y,b,a);
+    b-=a*(x/y);
+}
+ 
+int main()
+{
+IOS;
+    scanf("%d%d", &n, &k);
+    for (int i = 1;i <= n; ++i) scanf("%d", &a[i]);
+    for (int i = 1;i <= n; ++i)
+    {
+        if (vis[i]) continue;
+        vector<int> per;
+        per.pb(i);
+        vis[i] = 1;
+        for (int j = a[i];!vis[j];j = a[j])
+        {
+            /* cout << j << endl; */
+            vis[j] = 1;
+            per.pb(j);
+        }
+        if (per.size() == 1)
+        {
+            ans[per[0]] = per[0];
+            continue;
+        }
+        int tmp=k%per.size(),x,y;
+        exgcd(tmp, per.size(), x, y);
+        if (x < 0) x += per.size();
+        /* cout << x << endl; */
+        /* for (int j = 0;j < (int) per.size(); ++j) cout << per[j] << ' '; */
+        /* cout << endl; */
+        for (int j = 0;j < (int)per.size(); ++j)
+            ans[per[j]] = per[(j+x)%per.size()];
+        /* cout << "o" << endl; */
+    }
+    for (int i = 1;i <= n; ++i) printf("%d ", ans[i]);
+    puts("");
+ 
+    return 0;
+}
+```
+
+## K.Keyboard Free
+
+队友补的
