--- a/多校/2020杭电/2020杭电多校第一场.md
+++ b/多校/2020杭电/2020杭电多校第一场.md
@@ -8,11 +8,352 @@
 长度为$n$组成的字符串，让其本质不同的回文子串数量最少有多少种这样的字符串。
 长度为1和2的特判， 其他的可以形如$abcabc$。答案就是$26*25*24$。
 
+```c++
+#include<iostream>
+#include<string>
+#include<cstdio>
+#include<vector>
+#include<string.h>
+#include<cstring>
+#include<set>
+#include<queue>
+#include<algorithm>
+#include<math.h>
+#include<stdio.h>
+#include<map>
+#include<stack>
+#include<list>
+#include<assert.h>
+#define pii pair<int, int>
+#define pll pair<LL, LL>
+#define pil pair<int, LL>
+#define pli pair<LL, int>
+#define mp make_pair
+#define pb push_back
+#define IOS ios::sync_with_stdio(false);cin.tie(0);cout.tie(0);
+#define MINF 0x3f3f3f3f
+using namespace std;
+typedef long long LL;
+typedef unsigned long long ULL;
+const LL LLINF = 1e18;
+const int INF = 1e9;
+const int MOD = 998244353;
+const int HMOD = 999959;
+const int VMOD = 5000000;
+const int MAXN = 3e5+10;
+const int MAXM = 5e5+10;
+const int INV = 10050505;
+const LL LLINV = 1e18;
+const double eps = 1e-3;
+int dirx[5] = {0, -1, 1, 0, 0}, diry[5] = {0, 0, 0, -1, 1};
+
+LL n;
+
+int fac[30], facr[30];
+
+LL powmod(LL a, LL b)
+{
+    LL ans = 1;
+    while(b)
+    {
+        if (b&1) ans = ans*a%MOD;
+        a = a*a%MOD;
+        b >>= 1;
+    }
+    return ans;
+}
+
+LL C(int a, int b)
+{
+    if (a == b) return 1LL;
+    if (b == 0) return 1LL;
+    LL tmp = 1;
+    for (int i = 1;i <= b; ++i)
+    {
+        tmp = tmp*a%MOD;
+        --a;
+    }
+    /* cout << "C: " << a << ' ' << b << ' ' << tmp << endl; */
+    return tmp*powmod(fac[b], MOD-2)%MOD;
+}
+
+int main()
+{
+IOS;
+    /* freopen("test.out", "w", stdout); */
+    fac[1] = 1;
+    for (int i = 2;i < 30; ++i) 
+        fac[i] = 1LL*fac[i-1]*i%MOD;
+    facr[1] = 26;
+    for (int i = 2, j = 25;i <= 26; ++i, --j)
+        facr[i] = 1LL*facr[i-1]*j%MOD;
+    /* for (int i = 1;i <= 26; ++i) cout << facr[i] << ' '; cout << endl; */
+    int _; scanf("%d", &_);
+    while(_--)
+    {
+        scanf("%lld", &n);
+        if (n == 1) puts("26");
+        else if (n == 2) puts("676");
+        else if (n == 3) puts("17576");
+        else printf("%lld\n", (LL)26*25*24);
+    }
+    
+
+    return 0;
+}
+```
+
 ## E AC
+
+计算$\sum _{i = 0} ^ n (F_{i*c})^k$  
+对于$Fibonacci$的第$i$项有$F_i = \frac{1}{\sqrt{5}}((\frac{1+\sqrt{5}}{2})^n - (\frac{1-\sqrt{5}}{2})^n)$.  
+我们令$\frac{1+\sqrt{5}}{2} = a, \frac{1-\sqrt{5}}{2} = b$,$F_i = \frac{1}{\sqrt{5}}(a^n - b^n)$
+$$
+\begin{aligned}
+\sum _{i = 0} ^ n (F_{i*c})^k & = & \sum_{i=0}^n (\frac{1}{\sqrt{5}}(a^{i*c} - b^{i*c}))^k \\
+& = & (\frac{1}{\sqrt{5}})^k \sum_{i=0}^n (a^{i*c} - b^{i*c}))^k\\
+& = & (\frac{1}{\sqrt{5}})^k \sum_{i=0}^n \sum_{j=0}^k C_k^ja^{i*c*j}b^{i*c*(k-j)}(-1)^{k-j} \\
+& = & (\frac{1}{\sqrt{5}})^k \sum_{j=0}^k C_k^j \sum_{i=0}^n C_k^ja^{i*c*j}b^{i*c*(k-j)}(-1)^{k-j}
+\end{aligned}
+$$
+可以发现里面是一个等比数列， 预处理出组合数， 然后计算等比数列的公式$\frac{1-q^{n+1}}{1-q}$,令$p = q^{n+1}$, 我们让每次循环减少一些次方运算，计算一下每一项之间的差值每次只用乘法就行。  
+```c++
+#include<iostream>
+#include<string>
+#include<cstdio>
+#include<vector>
+#include<string.h>
+#include<cstring>
+#include<set>
+#include<queue>
+#include<algorithm>
+#include<math.h>
+#include<stdio.h>
+#include<map>
+#include<stack>
+#include<list>
+#define pii pair<int, int>
+#define pll pair<LL, LL>
+#define pil pair<int, LL>
+#define pli pair<LL, int>
+#define mp make_pair
+#define pb push_back
+#define IOS ios::sync_with_stdio(false);cin.tie(0);cout.tie(0);
+#define MINF 0x3f3f3f3f
+using namespace std;
+typedef long long LL;
+typedef unsigned long long ULL;
+const LL LLINF = 1e18;
+const int INF = 1e9;
+const int MOD = 1e9+9;
+const int HMOD = 999959;
+const int VMOD = 5000000;
+const int MAXN = 1e5+10;
+const int MAXM = 5e5+10;
+const int INV = 10050505;
+const LL LLINV = 1e18;
+const double eps = 1e-3;
+int dirx[5] = {0, -1, 1, 0, 0}, diry[5] = {0, 0, 0, -1, 1};
+
+// 383008016
+int v5 = 383008016, inv5 = 276601605;
+int inv2 = 500000005;
+int A = 691504013, B = 308495997; // (1+sqrt(5))/2 (1-sqrt(5))/2
+LL n, c, k;
+int fac[MAXN], inv[MAXN];
+
+LL powmod(LL a, LL b)
+{
+    LL ans = 1;
+    while(b)
+    {
+        if (b&1) ans = ans*a%MOD;
+        a = a*a%MOD;
+        b >>= 1;
+    }
+    return ans;
+}
+
+void pre()
+{
+    fac[1] = 1;
+    for (int i = 2;i < MAXN; ++i) 
+        fac[i] = (LL)fac[i-1]*i%MOD;
+    inv[0] = inv[1] = 1;
+    for (int i = 2;i < MAXN; ++i)
+        inv[i] = 1LL*(MOD-MOD/i)*inv[MOD%i]%MOD;
+    for (int i = 2;i < MAXN; ++i)
+        inv[i] = (LL)inv[i-1]*inv[i]%MOD;
+}
+
+LL comb(LL a, LL b)
+{
+    if (b == 0 || a == b) return 1;
+    return (LL)fac[a]*inv[b]%MOD*inv[a-b]%MOD;
+}
+
+LL solve(LL n, LL c, LL k)
+{
+    LL ans = 0;
+    LL q = powmod(powmod(B, c), k);
+    LL p = powmod(q, n+1);
+    LL up = (LL)powmod(powmod(B, c), MOD-2)*powmod(A, c)%MOD;
+    LL upd = powmod(up, n+1);
+    LL x = (n+1)%MOD;
+    for (int i = 0;i <= k; ++i)
+    {
+        LL cm = comb(k, i);
+        if ((k-i)&1) cm = MOD-cm;
+        if (q == 1) ans += cm*x%MOD;
+        else ans += cm*(1-p+MOD)%MOD*powmod(1-q+MOD, MOD-2)%MOD;
+        if (ans > MOD) ans -= MOD;
+        if (ans < 0) ans += MOD;
+        q = q*up%MOD;
+        p = p*upd%MOD;
+    }
+    ans = ans*powmod(inv5, k)%MOD;
+    return ans;
+}
+
+int main()
+{
+IOS;
+    pre();
+    int _;
+    scanf("%d", &_);
+    while(_--)
+    {
+        scanf("%lld%lld%lld", &n, &c, &k);
+        LL ans = solve(n, c, k);
+        printf("%lld\n", ans);
+    }
+    
+
+    return 0;
+}
+```
+
 ## F
 ## G
 ## H
 ## I AC
+
+n个机器人，在不同位置，相同方向，不同加速度，问最多几个人可以严格在某一时刻第一。  
+先对位置从小到大排序，去掉不可能第一的机器人，再用单调栈维护一个前面位置肯定比后面位置先第一的序列，对于每个新加入的点，都去判断会不会在前一个第一之前超过他。  
+
+```c++
+#include<iostream>
+#include<string>
+#include<cstdio>
+#include<vector>
+#include<string.h>
+#include<cstring>
+#include<set>
+#include<queue>
+#include<algorithm>
+#include<math.h>
+#include<stdio.h>
+#include<map>
+#include<stack>
+#include<list>
+#define pii pair<int, int>
+#define pll pair<LL, LL>
+#define pil pair<int, LL>
+#define pli pair<LL, int>
+#define mp make_pair
+#define pb push_back
+#define IOS ios::sync_with_stdio(false);cin.tie(0);cout.tie(0);
+#define MINF 0x3f3f3f3f
+using namespace std;
+typedef long long LL;
+typedef unsigned long long ULL;
+const LL LLINF = 1e18;
+const int INF = 1e9;
+const int MOD = 20101009;
+const int HMOD = 999959;
+const int VMOD = 5000000;
+const int MAXN = 5e4+10;
+const int MAXM = 5e5+10;
+const int INV = 10050505;
+const LL LLINV = 1e18;
+const double eps = 1e-3;
+int dirx[5] = {0, -1, 1, 0, 0}, diry[5] = {0, 0, 0, -1, 1};
+
+int n;
+pair<LL, LL> a[MAXN];
+int vis[MAXN], nxt[MAXN];
+int st[MAXN];
+
+bool cmp(pair<LL, LL> a, pair<LL, LL> b)
+{
+    if (a.first != b.first) return a.first > b.first;
+    return a.second > b.second;
+}
+
+int main()
+{
+IOS;
+    /* freopen("leading-robots.in", "r", stdin); */
+    int _;
+    scanf("%d", &_);
+    while(_--)
+    {
+        scanf("%d", &n);
+        for (int i = 1;i <= n; ++i) vis[i] = 1;
+        for (int i = 1;i <= n; ++i) scanf("%lld%lld", &a[i].first, &a[i].second);
+        if (n == 1)
+        {
+            puts("1");
+            continue;
+        }
+        sort(a+1, a+1+n, cmp);
+        int tmp = 0, tot = 0;
+        for (int i = 1;i <= n; ++i)
+        {
+            if (tmp != 0 && a[i] == a[tmp])
+            {
+                vis[tmp] = 0;
+                continue;
+            }
+            a[++tmp] = a[i];
+        }
+        for (int i = 1;i <= tmp; ++i)
+        {
+            if (i > 1 && a[i-1].second >= a[i].second) continue;
+            a[++tot] = a[i];
+            vis[tot] = vis[i];
+        }
+        /* for (int i = 1;i <= tot; ++i) printf("%lld %lld %d\n", a[i].first, a[i].second, vis[i]); */
+        /* for (int i = 1;i <= tot; ++i) cout << a[i].first << endl; */
+        int sum = 0;
+        st[++sum] = 1;
+        if (tot > 1) st[++sum] = 2;
+        for (int i = 3;i <= tot; ++i)
+        {
+            while(sum >= 2)
+            {
+                int x = st[sum-1], y = st[sum];
+                LL d1 = a[x].first-a[y].first, d2 = a[y].first-a[i].first;
+                LL a1 = a[y].second-a[x].second, a2 = a[i].second-a[y].second;
+                if (d1*a2 < d2*a1) break;
+                --sum;
+            }
+            st[++sum] = i;
+        }
+        int ans = 0;
+            /* cout << i << endl; */
+        for (int i = 1;i <= sum; ++i)
+        {
+            if (vis[st[i]]) ++ans;
+        }
+        printf("%d\n", ans);
+    }
+    
+
+    return 0;
+}
+```
+
 ## J
 ## K
 ## L
