--- a/多校/2020杭电/2020杭电多校第一场.md
+++ b/多校/2020杭电/2020杭电多校第一场.md
@@ -3,7 +3,7 @@
 ## A
 ## B
 ## C
-## D AC
+## D.Distinct Sub-palindromes AC
 
 长度为$n$组成的字符串，让其本质不同的回文子串数量最少有多少种这样的字符串。
 长度为1和2的特判， 其他的可以形如$abcabc$。答案就是$26*25*24$。
@@ -103,7 +103,7 @@ IOS;
 }
 ```
 
-## E AC
+## E.Fibonacci Sum AC
 
 计算$\sum _{i = 0} ^ n (F_{i*c})^k$  
 对于$Fibonacci$的第$i$项有$F_i = \frac{1}{\sqrt{5}}((\frac{1+\sqrt{5}}{2})^n - (\frac{1-\sqrt{5}}{2})^n)$.  
@@ -233,10 +233,214 @@ IOS;
 }
 ```
 
-## F
+## F.Finding a MEX AC
+
+一个图，每个点有一个权值，每个点的$MEX$是它所连边的所有点不包括自己的权值集合的$MEX$.  
+考虑对图中的点分类，$m$足够大的情况下最多只有$m*$的度数， 所以均摊到每个点是很少的，考虑把度数大于$350$的点看出是大度数点，则最多只有$\frac{m}{350}$个点是大度数点，而小度数的点的数量虽然多，但是度数很小， 所以对两种点分别处理。每个点用树状数组维护$MEX$，可以知道一个点的$MES$取值范围是在$[0, d[i]]$之间，$d[i]$表示$i$点的度数。所以每个树状数组动态的建立。  
+每次操作，如果是小度数点，如果是修改，暴力便利周围点修改。大度数点直接修改值，不去跟周围的点处理。  
+对于查询，对每个点把周围的大度数点的贡献计算上，考虑大度数点的个数不多，可以暴力计算。  
+
+```c++
+#include<iostream>
+#include<string>
+#include<cstdio>
+#include<vector>
+#include<string.h>
+#include<cstring>
+#include<set>
+#include<queue>
+#include<algorithm>
+#include<math.h>
+#include<stdio.h>
+#include<map>
+#include<stack>
+#include<list>
+#define pii pair<int, int>
+#define pll pair<LL, LL>
+#define pil pair<int, LL>
+#define pli pair<LL, int>
+#define mp make_pair
+#define pb push_back
+#define IOS ios::sync_with_stdio(false);cin.tie(0);cout.tie(0);
+#define MINF 0x3f3f3f3f
+using namespace std;
+typedef long long LL;
+typedef unsigned long long ULL;
+const LL LLINF = 1e18;
+const int INF = 1e9;
+const int MOD = 20101009;
+const int HMOD = 999959;
+const int VMOD = 5000000;
+const int MAXN = 1e5+10;
+const int MAXM = 5e5+10;
+const int INV = 10050505;
+const LL LLINV = 1e18;
+const double eps = 1e-3;
+int dirx[5] = {0, -1, 1, 0, 0}, diry[5] = {0, 0, 0, -1, 1};
+
+int n, m;
+int a[MAXN], d[MAXN];
+int len[MAXN];
+vector<int> G[MAXN], c[MAXN], cnt[MAXN], bigv[MAXN];
+
+int lowbit(int x)
+{
+	return x & -x;
+}
+
+void add(int id, int x, int v)
+{
+	// 1-> len[id]-1 1 -> G[id].size()
+	while(x <= len[id]-1)
+	{
+		c[id][x] += v;
+		x += lowbit(x);
+	}
+}
+
+int getsum(int id, int x)
+{
+	int sum = 0;
+	while (x > 0)
+	{
+		sum += c[id][x];
+		x -= lowbit(x);
+	}
+	return sum+(cnt[id][0] > 0);
+}
+
+int qry(int id)
+{
+	int l = 1, r = len[id]-1;
+	if (cnt[id][0] == 0)
+	{
+		// cout << "zero" << endl;
+	 	return 0;
+	}
+	// cout << l << ' ' << r << endl;
+	while (l <= r)
+	{
+		int mid = (l+r)/2;
+		int sum = getsum(id, mid-1);
+		// cout << sum << ' ' << mid << ' ' << cnt[id][mid] << endl;
+		if (sum == mid)
+		{
+			if (cnt[id][mid] == 0) return mid;
+			else l = mid+1;
+		}
+		else r = mid-1;
+	}
+	return 0;
+}
+
+int main()
+{
+IOS;
+#ifdef LOCAL_JUDGE
+	freopen("test.in", "r", stdin);
+	freopen("test.out", "w", stdout);
+#endif
+	int MAXD = 350;
+	int T;
+	scanf("%d", &T);
+	while(T--)
+	{
+		scanf("%d%d", &n, &m);
+		for (int i = 1;i <= n; ++i) d[i] = 0, G[i].clear(), bigv[i].clear(), c[i].clear(), cnt[i].clear();
+		for (int i = 1;i <= n; ++i) scanf("%d", &a[i]);
+		for (int i = 1, u, v;i <= m; ++i)
+		{
+			scanf("%d%d", &u, &v);
+			G[u].pb(v);
+			G[v].pb(u);
+			++d[u];
+			++d[v];
+		}
+		for (int i = 1;i <= n; ++i) 
+		{
+			len[i] = d[i]+1;
+			c[i].resize(len[i]);
+			cnt[i].resize(len[i]);
+			for (int v: G[i])
+				if (d[v] >= MAXD) bigv[i].pb(v);
+		}
+		for (int i = 1;i <= n; ++i)
+		{
+			for (int v: G[i])
+			{
+				if (len[v] >= MAXD) continue;
+				if (a[v] >= len[i]) continue;
+				++cnt[i][a[v]];
+				if (a[v] != 0 && cnt[i][a[v]] == 1) 
+				{
+					// cout << i << ' ' << v << endl;
+					add(i, a[v], 1);
+				}
+			}
+		}
+		// cout << getsum(1, 3) << endl;
+		// return 0;
+		int q;
+		int op, x, y;
+		scanf("%d", &q);
+		while(q--)
+		{
+			scanf("%d", &op);
+			if (op == 1)
+			{
+				scanf("%d%d", &x, &y);
+				if (d[x] < MAXD)
+				{
+					for (int v: G[x])
+					{
+						if (a[x] < len[v])
+						{
+							--cnt[v][a[x]];
+							if (cnt[v][a[x]] == 0 && a[x] != 0) add(v, a[x], -1);
+						}
+						if (y < len[v])
+						{
+							++cnt[v][y];
+							if (cnt[v][y] == 1 && y != 0) add(v, y, 1);
+						}
+					}
+					a[x] = y;
+				}
+				else a[x] = y;
+			}
+			else
+			{
+				scanf("%d", &x);
+				for (int v: bigv[x])
+				{
+					if (a[v] < len[x])
+					{
+						++cnt[x][a[v]];
+						if (cnt[x][a[v]] == 1 && a[v] != 0) add(x, a[v], 1);
+					}
+				}
+				// cout << "getsum: " << getsum(x, 0) << endl;
+				int ans = qry(x);
+				printf("%d\n", ans);
+				for (int v: bigv[x])
+				{
+					if (a[v] < len[x])
+					{
+						--cnt[x][a[v]];
+						if (cnt[x][a[v]] == 0 && a[v] != 0) add(x, a[v], -1);
+					}
+				}
+			}
+		}
+	}
+
+	return 0;
+}
+```
+
 ## G
 ## H
-## I AC
+## I.Leading Robots AC
 
 n个机器人，在不同位置，相同方向，不同加速度，问最多几个人可以严格在某一时刻第一。  
 先对位置从小到大排序，去掉不可能第一的机器人，再用单调栈维护一个前面位置肯定比后面位置先第一的序列，对于每个新加入的点，都去判断会不会在前一个第一之前超过他。  
