--- a/多校/2020牛客/2020牛客多校第九场.md
+++ b/多校/2020牛客/2020牛客多校第九场.md
@@ -42,7 +42,146 @@ print(cal(0, n-1))
 
 ```
 
-## B
+## B.Groundhog and Apple Tree
+
+有根树，从根遍历每个节点再返回，每条边有消耗，每个点有增加，问还需要增加多少满足，不会出现负数情况。  
+对每个点计算一个子树的全部贡献$a$, 和一个最差的贡献$b$,那么答案就是$1$号点的$-b$。
+对于点$u$,其$a$值是固定的， 我们最大化他的$b$值即可。证明式子看官方题解。  
+
+```c++
+#include<iostream>
+#include<string>
+#include<cstdio>
+#include<vector>
+#include<string.h>
+#include<cstring>
+#include<set>
+#include<queue>
+#include<algorithm>
+#include<math.h>
+#include<stdio.h>
+#include<map>
+#include<stack>
+#include<list>
+#define pii pair<int, int>
+#define pll pair<LL, LL>
+#define pil pair<int, LL>
+#define pli pair<LL, int>
+#define mp make_pair
+#define pb push_back
+#define IOS ios::sync_with_stdio(false);cin.tie(0);cout.tie(0);
+#define MINF 0x3f3f3f3f
+using namespace std;
+typedef long long LL;
+typedef unsigned long long ULL;
+const LL LLINF = 1e18;
+const int INF = 1e9;
+const int MOD = 20101009;
+const int HMOD = 999959;
+const int VMOD = 5000000;
+const int MAXN = 1e5+10;
+const int MAXM = 5e5+10;
+const int INV = 10050505;
+const LL LLINV = 1e18;
+const double eps = 1e-3;
+int dirx[5] = {0, -1, 1, 0, 0}, diry[5] = {0, 0, 0, -1, 1};
+
+struct Edge
+{
+    int v, nxt;
+    LL w;
+}e[MAXN*2];
+struct Node
+{
+    LL a, b;
+    bool operator < (const Node& rhs) const
+    {
+        if (a >= 0 && rhs.a >= 0) return b > rhs.b;
+        if (a < 0 && rhs.a < 0) return a-b > rhs.a-rhs.b;
+        return min(b, a+rhs.b) > min(rhs.b, rhs.a+b);
+        if (a >= 0 && rhs.a < 0) return true;
+        else if (a < 0 && rhs.a >= 0) return false;
+        else if (a >= 0 && rhs.a >= 0) return b > rhs.b;
+        else return a-b > rhs.a-rhs.b;
+    }
+}node[MAXN];
+LL a[MAXN], h[MAXN], s[MAXN];
+int fir[MAXN], cnt, n, tot;
+
+void addedge(int u, int v, LL w)
+{
+    e[cnt] = Edge{v, fir[u], w};
+    fir[u] = cnt;
+    ++cnt;
+}
+
+void dfs(int u, int fa)
+{
+    h[u] = s[u] = 0;
+    for (int i = fir[u];~i;i = e[i].nxt)
+    {
+        int v = e[i].v;
+        if (v == fa) continue;
+        dfs(v, u);
+        s[v] -= e[i].w*2;
+        h[v] -= e[i].w;
+        h[v] = min(h[v], s[v]);
+        h[v] = min(h[v], -e[i].w);
+    }
+    tot = 0;
+    for (int i = fir[u];~i;i = e[i].nxt)
+    {
+        int v = e[i].v;
+        if (v == fa) continue;
+        node[++tot] = Node{s[v], h[v]};
+    }
+    sort(node+1, node+1+tot);
+    for (int i = 1;i <= tot; ++i)
+    {
+        h[u] = min(h[u], s[u]+node[i].b);
+        s[u] += node[i].a;
+    }
+    s[u] += a[u];
+    h[u] += a[u];
+}
+
+void solve()
+{
+    cnt = 0;
+    scanf("%d", &n);
+    for (int i = 1;i <= n; ++i) fir[i] = -1;
+    for (int i = 1;i <= n; ++i) scanf("%lld", &a[i]);
+    for (int i = 1;i < n; ++i)
+    {
+        int u, v;
+        LL w;
+        scanf("%d%d%lld", &u, &v, &w);
+        addedge(u, v, w);
+        addedge(v, u, w);
+    }
+    dfs(1, 0);
+    printf("%lld\n", max(0LL, -h[1]));
+}
+
+int main()
+{
+IOS;
+#ifdef LOCAL_JUDGE
+    freopen("test.in", "r", stdin);
+    // freopen("test.out", "w", stdout);
+#endif
+    int T;
+    scanf("%d", &T);
+    while(T--)
+    {
+        solve();
+    }
+    
+
+    return 0;
+}
+```
+
 ## C
 ## D
 ## E.Groundhog Chasing Death
@@ -302,7 +441,198 @@ IOS;
 ## G.Groundhog Playing Scissors
 ## H.Groundhog Speaking Groundhogish
 ## I.The Crime-solving Plan of Groundhog
+
+用$n$个数组组成两个不包括前导$0$的数，使其乘积最小。  
+贪心的考虑一个较小值乘上另一个值，让最小值变成最小的非$0$元素，再模拟一下乘积。
+
+```c++
+#include<iostream>
+#include<string>
+#include<cstdio>
+#include<vector>
+#include<string.h>
+#include<cstring>
+#include<set>
+#include<queue>
+#include<algorithm>
+#include<math.h>
+#include<stdio.h>
+#include<map>
+#include<stack>
+#include<list>
+#define pii pair<int, int>
+#define pll pair<LL, LL>
+#define pil pair<int, LL>
+#define pli pair<LL, int>
+#define mp make_pair
+#define pb push_back
+#define IOS ios::sync_with_stdio(false);cin.tie(0);cout.tie(0);
+#define MINF 0x3f3f3f3f
+using namespace std;
+typedef long long LL;
+typedef unsigned long long ULL;
+const LL LLINF = 1e18;
+const int INF = 1e9;
+const int MOD = 20101009;
+const int HMOD = 999959;
+const int VMOD = 5000000;
+const int MAXN = 3e5+10;
+const int MAXM = 5e5+10;
+const int INV = 10050505;
+const LL LLINV = 1e18;
+const double eps = 1e-3;
+int dirx[5] = {0, -1, 1, 0, 0}, diry[5] = {0, 0, 0, -1, 1};
+
+int n;
+int a[MAXN];
+
+int main()
+{
+IOS;
+#ifdef LOCAL_JUDGE
+    freopen("test.in", "r", stdin);
+    // freopen("test.out", "w", stdout);
+#endif
+    int T;
+    scanf("%d", &T);
+    while(T--)
+    {
+        scanf("%d", &n);
+        for (int i = 1;i <= n; ++i) scanf("%d", &a[i]);
+        sort(a+1, a+1+n);
+        int x;
+        for (int i = 1;i <= n; ++i)
+        {
+            if (a[i] != 0) 
+            {
+                x = a[i]; 
+                a[i] = 0;
+                int tmp = a[i+1];
+                a[i+1] = 0;
+                a[2] = tmp;
+                break;
+            }
+        }
+        // for (int i = 1;i <= n; ++i) printf("%d", a[i]);
+        // puts("");
+        int las = 0;
+        for (int i = n;i >= 1;--i)
+        {
+            int v = a[i]*x+las;
+            a[i] = v%10;
+            las = v/10;
+        }
+        if (a[1] != 0) printf("%d", a[1]);
+        for (int i = 2;i <= n; ++i) printf("%d", a[i]);
+        puts("");
+    }
+    
+
+    return 0;
+}
+```
+
 ## J.The Escape Plan of Groundhog
+
+经典读错题， 题目要求是周围都是$1$的子矩阵内部的$0, 1$数量差不大于$1$。读成不能有两个连续的$0$。  
+枚举上下界，计算这个范围内的答案贡献，前缀和记录之前的$0, 1$数量，对于每个可以满足当边界的点，记录下来。  
+
+```c++
+#include<iostream>
+#include<string>
+#include<cstdio>
+#include<vector>
+#include<string.h>
+#include<cstring>
+#include<set>
+#include<queue>
+#include<algorithm>
+#include<math.h>
+#include<stdio.h>
+#include<map>
+#include<stack>
+#include<list>
+#define pii pair<int, int>
+#define pll pair<LL, LL>
+#define pil pair<int, LL>
+#define pli pair<LL, int>
+#define mp make_pair
+#define pb push_back
+#define IOS ios::sync_with_stdio(false);cin.tie(0);cout.tie(0);
+#define MINF 0x3f3f3f3f
+using namespace std;
+typedef long long LL;
+typedef unsigned long long ULL;
+const LL LLINF = 1e18;
+const int INF = 1e9;
+const int MOD = 20101009;
+const int HMOD = 999959;
+const int VMOD = 5000000;
+const int MAXN = 3e5+10;
+const int MAXM = 5e5+10;
+const int INV = 10050505;
+const LL LLINV = 1e18;
+const double eps = 1e-3;
+int dirx[5] = {0, -1, 1, 0, 0}, diry[5] = {0, 0, 0, -1, 1};
+
+int n, m;
+int pre[510][510], G[510][510];
+int MAX = 510*510;
+int cnt[510*510*2], s[510];
+
+int main()
+{
+IOS;
+#ifdef LOCAL_JUDGE
+    freopen("test.in", "r", stdin);
+    // freopen("test.out", "w", stdout);
+#endif
+    scanf("%d%d", &n, &m);
+    for (int i = 1;i <= n; ++i)
+    {
+        for (int j = 1;j <= m; ++j)
+        {
+            scanf("%d", &G[i][j]);
+            if (G[i][j] == 0) G[i][j] = -1;
+            pre[i][j] = pre[i-1][j]+G[i][j];
+        }
+    }
+    LL ans = 0;
+    for (int i = 1;i <= n; ++i)
+    {
+        for (int j = i+1;j <= n; ++j)
+        {
+            int les = 1;
+            // int tmp = ans;
+            for (int k = 1;k <= m; ++k)
+            {
+                if (G[i][k] == -1 || G[j][k] == -1)
+                {
+                    for (int l = les;l <= k; ++l)
+                        if (pre[j][l]-pre[i-1][l] == j-i+1) cnt[s[l]]--;
+                    s[k] = MAX;
+                    les = k+1;                
+                }
+                else
+                {
+                    if (pre[j][k]-pre[i-1][k] == j-i+1) 
+                    {
+                        ans += (cnt[s[k-1]]+cnt[s[k-1]-1]+cnt[s[k-1]+1]);
+                    }
+                    s[k] = s[k-1]+pre[j-1][k]-pre[i][k];
+                    if (pre[j][k]-pre[i-1][k] == j-i+1) cnt[s[k]]++;
+                }
+            }
+            for (int k = 1;k <= m; ++k) cnt[s[k]] = 0;
+            // cout << i << ' ' << j << ' ' << ans-tmp << endl;
+        }
+    }
+    printf("%lld\n", ans);
+
+    return 0;
+}
+```
+
 ## K.The Flee Plan of Groundhog
 
 一颗树， 从$1$到$n$的路径上跑$t$步之后，$n$点有个怪物以两倍的速度追你，问你最长能活多久，追上就死，你一步怪物一步。  
