2020杭电多校第三场

--- a/多校/2020杭电/2020杭电多校第三场.md
+++ b/多校/2020杭电/2020杭电多校第三场.md
@@ -1,3 +1,476 @@
 # 2020 Multi-University Training Contest 3
-## G AC
+
+## A
+## B
+## C.
+## D.Tokitsukaze and Multiple
+
+给一个序列，每次可以合并两个相邻项，将两个相邻项相加在放到原位置，同时序列长度减一。最后计算最多几个数是$p$的倍数。  
+贪心考虑，一个数可以是$p$的倍数那么不要动他，所以从前往后能变成$p$的倍数就记录。  
+如果一段和不是$p$的倍数，但是下一位是$p$的倍数，那么舍弃掉前面一段和。
+
+```c++
+#include<iostream>
+#include<string>
+#include<cstdio>
+#include<vector>
+#include<string.h>
+#include<cstring>
+#include<set>
+#include<queue>
+#include<algorithm>
+#include<math.h>
+#include<stdio.h>
+#include<map>
+#include<stack>
+#include<list>
+#define pii pair<int, int>
+#define pll pair<LL, LL>
+#define pil pair<int, LL>
+#define pli pair<LL, int>
+#define mp make_pair
+#define pb push_back
+#define IOS ios::sync_with_stdio(false);cin.tie(0);cout.tie(0);
+#define MINF 0x3f3f3f3f
+using namespace std;
+typedef long long LL;
+typedef unsigned long long ULL;
+const LL LLINF = 1e18;
+const int INF = 1e9;
+const int MOD = 20101009;
+const int HMOD = 999959;
+const int VMOD = 5000000;
+const int MAXN = 1e5+10;
+const int MAXM = 5e5+10;
+const int INV = 10050505;
+const LL LLINV = 1e18;
+const double eps = 1e-3;
+int dirx[5] = {0, -1, 1, 0, 0}, diry[5] = {0, 0, 0, -1, 1};
+
+int n, p;
+int a[MAXN], pre[MAXN];
+pii pos[MAXN];
+
+int main()
+{
+IOS;
+#ifdef LOCAL_JUDGE
+    freopen("test.in", "r", stdin);
+    // freopen("test.out", "w", stdout);
+#endif
+    int T;
+    scanf("%d", &T);
+    for (int cas = 1; cas <= T; ++cas)
+    {
+        scanf("%d%d", &n, &p);
+        for (int i = 1;i <= n; ++i) scanf("%d", &a[i]);
+        pos[0].first = cas;
+        pos[0].second = 0;
+        int las = 0, ans = 0;
+        for (int i = 1;i <= n; ++i)
+        {
+            pre[i] = (pre[i-1]+a[i])%p;
+            if (pos[pre[i]].first == cas && pos[pre[i]].second+1 > las)
+            {
+                ++ans;
+                las = i;
+            }
+            pos[pre[i]].first = cas;
+            pos[pre[i]].second = i;
+        }
+        printf("%d\n", ans);
+    }
+
+    return 0;
+}
+```
+
+## E.Little W and Contest 
+
+有$n$个人，分成两种人$a, b$, 选三个人组成一个团队，队伍组成可以是$aab, aaa$。同时一个团队中不能有两个人互相熟悉，熟悉是传递的。  
+现在有$n-1$次查询，每次让两个人互相熟悉。每次查询在熟悉完之后，输出可能的组合个数，第一个是没有任何人熟悉的个数。  
+可以发现，每次熟悉都是将两个集合合并，那么只需要考虑两个集合中不同人数对组合的影响了。  
+并查集维护一下集合的人数。  
+
+```c++
+#include<iostream>
+#include<string>
+#include<cstdio>
+#include<vector>
+#include<string.h>
+#include<cstring>
+#include<set>
+#include<queue>
+#include<algorithm>
+#include<math.h>
+#include<stdio.h>
+#include<map>
+#include<stack>
+#include<list>
+#include<assert.h>
+#define pii pair<int, int>
+#define pll pair<LL, LL>
+#define pil pair<int, LL>
+#define pli pair<LL, int>
+#define mp make_pair
+#define pb push_back
+#define IOS ios::sync_with_stdio(false);cin.tie(0);cout.tie(0);
+#define MINF 0x3f3f3f3f
+using namespace std;
+typedef long long LL;
+typedef unsigned long long ULL;
+const LL LLINF = 1e18;
+const int INF = 1e9;
+const int MOD = 1e9+7;
+const int HMOD = 999959;
+const int VMOD = 5000000;
+const int MAXN = 1e5+10;
+const int MAXM = 5e5+10;
+const int INV = 10050505;
+const LL LLINV = 1e18;
+const double eps = 1e-3;
+int dirx[5] = {0, -1, 1, 0, 0}, diry[5] = {0, 0, 0, -1, 1};
+
+int n, f[MAXN], peo[MAXN];
+int cnt[MAXN][2]; // 0 -> coder, 1 -> reader
+
+int getfa(int x)
+{
+    if (f[x] == x) return f[x];
+    f[x] = getfa(f[x]);
+    return f[x];
+}
+
+int main()
+{
+IOS;
+    int T;
+    scanf("%d", &T);
+    while(T--)
+    {
+        scanf("%d", &n);
+        int sum0 = 0, sum1 = 0;
+        for (int i = 1;i <= n; ++i) 
+        {
+            scanf("%d", &peo[i]);
+            cnt[i][0] = cnt[i][1] = 0;
+            if (peo[i] == 2) ++sum0, ++cnt[i][0];
+            else ++sum1, ++cnt[i][1];
+            f[i] = i;
+        }
+        LL ans = 0;
+        if (sum0 >= 2) ans += ((LL)sum0*(sum0-1)/2)*sum1;
+        if (sum0 >= 3) ans += ((LL)sum0*(sum0-1)*(sum0-2)/6);
+        printf("%lld\n", ans%MOD);
+        for (int i = 1;i < n; ++i)
+        {
+            int u, v;
+            scanf("%d%d", &u, &v);
+            u = getfa(u), v = getfa(v);
+            if (u > v) swap(u, v);
+            assert(sum1-cnt[u][1]-cnt[v][1] >= 0);
+            assert(sum0-cnt[u][0]-cnt[v][0] >= 0);
+            LL c2 = 1LL*cnt[u][0]*cnt[v][0]*(sum1-cnt[u][1]-cnt[v][1]);
+            LL c3 = 1LL*cnt[u][0]*cnt[v][0]*(sum0-cnt[u][0]-cnt[v][0]);
+            LL ru = 1LL*cnt[u][1]*cnt[v][0]*(sum0-cnt[u][0]-cnt[v][0]);
+            LL rv = 1LL*cnt[u][0]*cnt[v][1]*(sum0-cnt[u][0]-cnt[v][0]);
+            /* cout << c2 << ' ' << c3 << ' ' << ru << ' ' << rv << endl; */
+            /* ans = ((ans - (c2+c3+ru+rv))%MOD+MOD)%MOD; */
+            ans = ans - (c2+c3+ru+rv);
+            printf("%lld\n", ans%MOD);
+            f[v] = u;
+            cnt[u][0] += cnt[v][0];
+            cnt[u][1] += cnt[v][1];
+        }
+    }
+    return 0;
+}
+```
+
+## F
+## G.Tokitsukaze and Rescue 
 暴力跑，每次删除最短路上的一条边， 二维数组记录边， 比邻接矩阵快。
+
+```c++
+#include<iostream>
+#include<string>
+#include<cstdio>
+#include<vector>
+#include<string.h>
+#include<cstring>
+#include<set>
+#include<queue>
+#include<algorithm>
+#include<math.h>
+#include<stdio.h>
+#include<map>
+#include<stack>
+#include<list>
+#define pii pair<int, int>
+#define pll pair<LL, LL>
+#define pil pair<int, LL>
+#define pli pair<LL, int>
+#define mp make_pair
+#define pb push_back
+#define IOS ios::sync_with_stdio(false);cin.tie(0);cout.tie(0);
+#define MINF 0x3f3f3f3f
+using namespace std;
+typedef long long LL;
+typedef unsigned long long ULL;
+const LL LLINF = 1e18;
+const int INF = 1e9;
+const int MOD = 20101009;
+const int HMOD = 999959;
+const int VMOD = 5000000;
+const int MAXN = 3e5+10;
+const int MAXM = 5e5+10;
+const int INV = 10050505;
+const LL LLINV = 1e18;
+const double eps = 1e-3;
+int dirx[5] = {0, -1, 1, 0, 0}, diry[5] = {0, 0, 0, -1, 1};
+
+
+struct Heap
+{
+    int u, d;
+    bool operator < (const Heap& rhs) const
+    {
+        return this->d > rhs.d;
+    }
+};
+
+int G[55][55], ok[55][55], dis[55], vis[55], pre[55];
+int ans, n, k;
+
+int dij()
+{
+    for (int i = 1;i <= n; ++i) dis[i] = INF, vis[i] = 0;
+    priority_queue<Heap> que;
+    dis[1] = 0;
+    que.push(Heap{1, 0});
+    while(!que.empty())
+    {
+        int u = que.top().u; que.pop();
+        if (vis[u] == 1) continue;
+        vis[u] = 1;
+        for (int i = 1;i <= n; ++i)
+        {
+            if (ok[u][i])
+            {
+                if (dis[u]+G[u][i] < dis[i])
+                {
+                    dis[i] = dis[u]+G[u][i];
+                    pre[i] = u;
+                    que.push(Heap{i, dis[i]});
+                }
+            }
+        }
+    }
+    return dis[n];
+}
+
+void dfs(int step)
+{
+    if (step == k+1)
+    {
+        ans = max(ans, dij());
+        return;
+    }
+    dij();
+    vector<pii> p;
+    int x = n;
+    while(x != 1)
+    {
+        p.pb(mp(x, pre[x]));
+        x = pre[x];
+    }
+    for (auto pi: p)
+    {
+        ok[pi.first][pi.second] = ok[pi.second][pi.first] = 0;
+        dfs(step+1);
+        ok[pi.first][pi.second] = ok[pi.second][pi.first] = 1;
+    }
+}
+
+int main()
+{
+IOS;
+#ifdef LOCAL_JUDGE
+    freopen("test.in", "r", stdin);
+    // freopen("test.out", "w", stdout);
+#endif
+    int T;
+    scanf("%d", &T);
+    while(T--)
+    {
+        ans = 0;
+        scanf("%d%d", &n, &k);
+        int u, v, w;
+        for (int i = 1;i <= n*(n-1)/2; ++i)
+        {
+            scanf("%d%d%d", &u, &v, &w);
+            G[u][v] = G[v][u] = w;
+            ok[u][v] = ok[v][u] = 1;
+        }
+        dfs(1);
+        printf("%d\n", ans);
+    }
+
+    return 0;
+}
+
+```
+
+## H.Triangle Collision
+
+计算一个球在三角形内移动，第$k$秒的位置。  
+队友补的。
+
+```c++
+```
+
+## I.Parentheses Matching
+
+给一个括号序列，其中$*$可以替换$(, ),$和空的任意一个，找到最短的平衡串同时字典序最小。  
+记录$*$的位置， 每个$)$，先匹配$($。再去匹配最前面的$*$。  
+
+```c++
+#include<iostream>
+#include<string>
+#include<cstdio>
+#include<vector>
+#include<string.h>
+#include<cstring>
+#include<set>
+#include<queue>
+#include<algorithm>
+#include<math.h>
+#include<stdio.h>
+#include<map>
+#include<stack>
+#include<list>
+#define pii pair<int, int>
+#define pll pair<LL, LL>
+#define pil pair<int, LL>
+#define pli pair<LL, int>
+#define mp make_pair
+#define pb push_back
+#define IOS ios::sync_with_stdio(false);cin.tie(0);cout.tie(0);
+#define MINF 0x3f3f3f3f
+using namespace std;
+typedef long long LL;
+typedef unsigned long long ULL;
+const LL LLINF = 1e18;
+const int INF = 1e9;
+const int MOD = 20101009;
+const int HMOD = 999959;
+const int VMOD = 5000000;
+const int MAXN = 1e5+10;
+const int MAXM = 5e5+10;
+const int INV = 10050505;
+const LL LLINV = 1e18;
+const double eps = 1e-3;
+int dirx[5] = {0, -1, 1, 0, 0}, diry[5] = {0, 0, 0, -1, 1};
+
+char s[MAXN], ans[MAXN];
+int n, head, tail, que[MAXN];
+
+// bool check()
+// {
+//     int sum = 0, oth = 0, usex = 0;
+//     for (int i = 1;i <= n; ++i)
+//     {
+//         if (s[i] == '(') ++sum;
+//         else if (s[i] == ')')
+//         {
+//             if (sum > 0) --sum;
+//             else if (usex > 0) --usex, ++oth;
+//             else if (oth > 0) --oth;
+//             else return false;
+//         }
+//         else
+//         {
+//             if (sum > 0)
+//             {
+//                 --sum;
+//                 ++usex;
+//             }
+//             else ++oth;
+//         }
+//     }
+//     if (sum > 0) return false;
+//     return true;
+// }
+
+bool emp()
+{
+    for (int i = 1;i <= n; ++i) if (s[i] == '(' || s[i] == ')') return true;
+    return false;
+}
+
+bool solve()
+{
+    head = tail = 0;
+    int sum = 0;
+    for (int i = 1;i <= n; ++i)
+    {
+        if (s[i] == '(') ++sum;
+        else if (s[i] == '*') que[tail++] = i;
+        else
+        {
+            if (sum > 0) --sum;
+            else if (head < tail) s[que[head++]] = '(';
+            else return false;
+        }
+    }
+    for (int i = tail-1;i >= head && sum > 0; --i, --sum) s[que[i]] = ')';
+    if (sum > 0) return false;
+    return true;
+}
+
+bool ok(char *s)
+{
+    int len = strlen(s);
+    int sum = 0;
+    for (int i = 0; i < len; ++i)
+    {
+        if (s[i] == '(') ++sum;
+        else if (s[i] == ')') --sum;
+        if (sum < 0) return false;
+    }
+    if (sum > 0) return false;
+    return true;
+}
+
+int main()
+{
+IOS;
+#ifdef LOCAL_JUDGE
+    freopen("test.in", "r", stdin);
+    // freopen("test.out", "w", stdout);
+#endif
+    int T;
+    scanf("%d", &T);
+    while(T--)
+    {
+        scanf("%s", s+1);
+        n = strlen(s+1);
+        // if (!check()) {puts("No solution!"); continue; }
+        if (!emp()) {puts(""); continue; }
+        if (!solve()) {puts("No solution!"); continue;}
+        // cout << "out" << endl;
+        int tot = 0;
+        // cout << s+1 << endl;
+        for (int i = 1;i <= n; ++i) if (s[i] != '*') ans[++tot] = s[i];
+        ans[tot+1] = '\0';
+        // cout << ans+1 << endl;
+        if (!ok(ans+1)) {puts("No solution!"); continue;};
+        printf("%s\n", ans+1);
+    }
+
+    return 0;
+}
+```
+
+## J
+## K
